# NeRAF

./: .gitignore  README.md  index.html  pyproject.toml
NeRAF/: NeRAF_config.py  NeRAF_datamanager.py  NeRAF_dataparser.py  NeRAF_dataset.py  NeRAF_evaluator.py  NeRAF_field.py  NeRAF_helper.py  NeRAF_model.py  NeRAF_pipeline.py  NeRAF_resnet3d.py
assets/css/: style.css
data/: README.md
data/RAF/: README.md
data/RAF/EmptyRoom/: EmptyRoom_20-25.xml  transforms.json
data/RAF/FurnishedRoom/: FurnishedRoom_20-25.xml  transforms.json
data/SoundSpaces/: README.md  generate_vision.ipynb  process_audio.ipynb
data/SoundSpaces/apartment_1/: split.json
data/SoundSpaces/apartment_2/: apartment_2_Train.pkl  split.json
data/SoundSpaces/frl_apartment_2/: frl_apartment_2_SimParams.json  split.json
data/SoundSpaces/frl_apartment_4/: frl_apartment_4_Train.pkl  split.json
data/SoundSpaces/office_4/: split.json
data/SoundSpaces/room_2/: split.json
data/apartment_1/: apartment_1_Eval.pkl  apartment_1_SimParams.json  apartment_1_Train.pkl
data/apartment_2/: apartment_2_Eval.pkl  apartment_2_SimParams.json
data/frl_apartment_2/: frl_apartment_2_Eval.pkl  frl_apartment_2_Train.pkl
data/frl_apartment_4/: frl_apartment_4_Eval.pkl  frl_apartment_4_SimParams.json
data/office_4/: office_4_Eval.pkl  office_4_SimParams.json  office_4_Train.pkl
data/room_2/: room_2_Eval.pkl  room_2_SimParams.json  room_2_Train.pkl
docs/: bibtex.txt
viz/: example.json  loudness_maps.ipynb  video.ipynb
